syntax = "proto3";
package influxdata.iox.schema.v1;
option go_package = "github.com/influxdata/iox/schema/v1";

service SchemaService {
  // Get the schema for a namespace
  rpc GetSchema(GetSchemaRequest) returns (GetSchemaResponse);
}

message GetSchemaRequest {
  // The namespace for which to fetch the schema
  string namespace = 1;
}

message GetSchemaResponse {
  NamespaceSchema schema = 1;
}

message NamespaceSchema {
  // Namespace ID
  int64 id = 1;
  // Kafka Topic ID
  int64 kafka_topic_id = 2;
  // Query Pool ID
  int64 query_pool_id = 3;
  // Map of Table Name -> Table Schema
  map<string, TableSchema> tables = 4;
}

message TableSchema {
  // Table ID
  int64 id = 1;
  // Map of Column Name -> Table Schema
  map<string, ColumnSchema> columns = 2;
}

message ColumnSchema {
  // Column ID
  int64 id = 1;
  // Column type
  int32 column_type = 2;
}
